[gd_scene load_steps=4 format=2]

[ext_resource path="res://FireBall.gd" type="Script" id=1]

[sub_resource type="SphereMesh" id=1]
radius = 0.5
height = 1.0

[sub_resource type="SphereShape" id=2]
radius = 0.5

[node name="FireBall" type="MeshInstance"]
transform = Transform( 0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0, 0, 0 )
mesh = SubResource( 1 )
script = ExtResource( 1 )

[node name="Area" type="Area" parent="."]

[node name="Collision" type="CollisionShape" parent="Area"]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
